<resources>
    <string name="app_name">MedicineReminderApp</string>
    <string name="Intro">Join millions of people already taking control of their meds</string>
    <string name="TermsConditions">By proceeding, you agree to Terms and that you have read our Privacy policy</string>
    <string name="LoginString">Already have an account? Login</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name *</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>