<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="410dp"
        android:gravity="center"
        android:text="@string/Intro"
        android:textSize="17sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:text="@string/get_started"
        android:textSize="17sp" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignupButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/transparent"
        android:gravity="center"
        android:text="@string/LoginString"
        android:textSize="15sp" />

   <!-- <TextView
        android:id="@+id/LoginButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/LoginString"
        android:textSize="15sp"
        android:textColorLink="@color/blue"
        android:textColor="@color/white"
        android:layout_below="@+id/SignupButton"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>-->


    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/TermsConditions"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_below="@+id/LoginButton"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>


</RelativeLayout>