<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".LoginFragment">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#00FFFFFF"
        android:drawableLeft="@drawable/baseline_arrow_back_24"
         />

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:layout_centerHorizontal="true"
        android:textSize="27sp"
        android:textColor="@color/white"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="#80FFFFFF"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="#80FFFFFF"/>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="17sp" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Register Now"
        android:textSize="15sp"
        android:textColorLink="@color/blue"
        android:textColor="@color/white"
        android:layout_below="@+id/LoginButton"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        android:background="#00FFFFFF"
        android:gravity="center"/>


</RelativeLayout>